--- a/rl_sensors/config.yaml
+++ b/rl_sensors/config.yaml
@@ -21,7 +21,7 @@ env:
 
 encoder:
   embed_dim: 128
-  num_layers: 2
+  num_layers: 3
   num_heads: 4
   learning_rate: 3e-4
   tabulate: True
@@ -37,24 +37,24 @@ world_model:
   simnorm_dim: 8
   learning_rate: 3e-4
   predict_continues: False
-  dtype: float32
+  dtype: bfloat16
   max_grad_norm: 20
   tabulate: False
 
 tdmpc2:
   # Planning
   mpc: True
-  horizon: 3
+  horizon: 1
   mppi_iterations: 6
   population_size: 512
   policy_prior_samples: 24
   num_elites: 64
-  min_plan_std: 0.01
+  min_plan_std: 0
   max_plan_std: 2
   temperature: 1.0
   # Optimization
   batch_size: 256
-  discount: 0.9
+  discount: 0.0
   rho: 0.5
   consistency_coef: 20
   reward_coef: 0.1
