--- a/rl_sensors/config.yaml
+++ b/rl_sensors/config.yaml
@@ -21,7 +21,7 @@ env:
 
 encoder:
   embed_dim: 128
-  num_layers: 3
+  num_layers: 2
   num_heads: 4
   learning_rate: 3e-4
   tabulate: True
@@ -37,7 +37,7 @@ world_model:
   simnorm_dim: 8
   learning_rate: 3e-4
   predict_continues: False
-  dtype: bfloat16
+  dtype: float32
   max_grad_norm: 20
   tabulate: False
 
@@ -54,7 +54,7 @@ tdmpc2:
   temperature: 1.0
   # Optimization
   batch_size: 256
-  discount: 0.0
+  discount: 0.5
   rho: 0.5
   consistency_coef: 20
   reward_coef: 0.1
