--- a/rl_sensors/config.yaml
+++ b/rl_sensors/config.yaml
@@ -5,14 +5,14 @@ hydra:
     dir: outputs/${hydra.job.name}/${now:%Y-%m-%d_%H-%M-%S}
 
 seed: 0
-max_steps: 400_000
-buffer_size: 400_000
-save_interval_steps: 100000
-log_interval_steps: 10000
+max_steps: 500_000
+buffer_size: 500_000
+save_interval_steps: 100_000
+log_interval_steps: 10_000
 
 env:
   backend: gymnasium
-  env_id: GraphSearch-v0
+  env_id: GraphSearchTrack-v0
   num_envs: 4
   utd_ratio: 1.0
   asynchronous: True
@@ -51,7 +51,7 @@ tdmpc2:
   num_elites: 64
   min_plan_std: 0
   max_plan_std: 2
-  temperature: 1.0
+  temperature: 0.5
   # Optimization
   batch_size: 256
   discount: 0.95
