--- a/rl_sensors/config.yaml
+++ b/rl_sensors/config.yaml
@@ -5,8 +5,8 @@ hydra:
     dir: outputs/${hydra.job.name}/${now:%Y-%m-%d_%H-%M-%S}
 
 seed: 0
-max_steps: 500_000
-buffer_size: 500_000
+max_steps: 2_000_000
+buffer_size: 2_000_000
 save_interval_steps: 100_000
 log_interval_steps: 10_000
 
