--- a/rl_sensors/config.yaml
+++ b/rl_sensors/config.yaml
@@ -25,7 +25,7 @@ encoder:
   num_heads: 4
   learning_rate: 1e-4
   tabulate: True
-  dtype: float32
+  dtype: bfloat16
 
 world_model:
   latent_dim: 512
@@ -38,7 +38,7 @@ world_model:
   simnorm_dim: 8
   learning_rate: 3e-4
   predict_continues: False
-  dtype: float32
+  dtype: bfloat16
   max_grad_norm: 20
   tabulate: False
 
